Fixed code/margin overlap issue, added "current" class for main nav

--- a/resources/rawassets/css/style.scss
+++ b/resources/rawassets/css/style.scss
@@ -95,8 +95,7 @@ ul, ol
 
     ul, ol
     {
-        padding-top: 0;
-        padding-bottom: 0;
+        padding: 0 0 0 25px;
     }
 
     li
@@ -178,8 +177,8 @@ header.main nav, footer.main nav
         {
             padding: 0 10px;
             display: inline-block;
-            line-height: 2em;
-            font-size: 1.2em;
+            line-height: $headerHeight;
+            font-size: $headerHeight/2;
 
             &:first-child
             {
@@ -207,6 +206,11 @@ header.main
 
     nav
     {
+        li.current
+        {
+            background-color: #5ad;
+        }
+
         a, a:link, a:active, a:visited
         {
             color: #fff;
@@ -305,6 +309,7 @@ pre
 {
     padding: 10px;
     background: #f1f1f1;
+    position: relative;
 }
 
 code
